application/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base
  labels:
    app: base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: base
  template:
    metadata:
      labels:
        app: base
    spec:
      containers:
        - name: base
          image: "ghcr.io/anthonydurot/devfest-2021:main"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
