application/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devfest-base
  labels:
    app: devfest-base
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: devfest-base
