application/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base
  namespace: base
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: base.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: base
            port:
              number: 8080
